<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Web View View Controller-->
        <scene sceneID="WdU-kF-93E">
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="SoU-AT-jaI" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4fO-br-lAx">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KYN-rt-U75">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f2-Hn-be8">
                                <rect key="frame" x="0.0" y="0.0" width="64" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="2TT-ru-HIm"/>
                                    <constraint firstAttribute="width" constant="64" id="BHH-K5-2QY"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="SoU-AT-jaI" eventType="touchUpInside" id="EqH-nf-QFT"/>
                                </connections>
                            </button>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="puB-Dv-Lzq">
                                <rect key="frame" x="0.0" y="44" width="414" height="4"/>
                                <color key="tintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="AeY-sw-ZIk"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="3f2-Hn-be8" firstAttribute="top" secondItem="AeY-sw-ZIk" secondAttribute="top" id="9Cc-7d-ZJY"/>
                            <constraint firstItem="puB-Dv-Lzq" firstAttribute="top" secondItem="3f2-Hn-be8" secondAttribute="bottom" id="9bm-8H-Gje"/>
                            <constraint firstItem="KYN-rt-U75" firstAttribute="leading" secondItem="4fO-br-lAx" secondAttribute="leading" id="BEW-TT-V4e"/>
                            <constraint firstItem="3f2-Hn-be8" firstAttribute="leading" secondItem="AeY-sw-ZIk" secondAttribute="leading" id="JlX-1t-nxJ"/>
                            <constraint firstItem="AeY-sw-ZIk" firstAttribute="trailing" secondItem="puB-Dv-Lzq" secondAttribute="trailing" id="Mjg-cn-hJo"/>
                            <constraint firstAttribute="bottom" secondItem="KYN-rt-U75" secondAttribute="bottom" id="SDM-m1-9wk"/>
                            <constraint firstItem="KYN-rt-U75" firstAttribute="top" secondItem="4fO-br-lAx" secondAttribute="top" id="Woa-Hs-YVq"/>
                            <constraint firstItem="puB-Dv-Lzq" firstAttribute="leading" secondItem="AeY-sw-ZIk" secondAttribute="leading" id="Xir-hb-ZQ9"/>
                            <constraint firstAttribute="trailing" secondItem="KYN-rt-U75" secondAttribute="trailing" id="Xyp-YU-JVW"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="progressView" destination="puB-Dv-Lzq" id="37c-bH-IDs"/>
                        <outlet property="webView" destination="KYN-rt-U75" id="8NU-83-UsD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YKo-4g-VqA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1097" y="-1075"/>
        </scene>
        <!--Auth View Controller-->
        <scene sceneID="GvY-iS-aue">
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="mXz-jN-xZh" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="f58-4q-I1K">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="aEc-dx-9mJ">
                                <rect key="frame" x="177" y="418" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="GAq-rH-XRI"/>
                                    <constraint firstAttribute="height" constant="60" id="aHZ-66-rbm"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ojc-jL-xjS">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="2ih-Yy-Aom"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <segue destination="SoU-AT-jaI" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" id="ANy-5c-Qd8"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="ipu-hV-pBQ"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="ojc-jL-xjS" firstAttribute="centerX" secondItem="f58-4q-I1K" secondAttribute="centerX" id="Dhe-hC-6m5"/>
                            <constraint firstItem="ipu-hV-pBQ" firstAttribute="bottom" secondItem="ojc-jL-xjS" secondAttribute="bottom" constant="90" id="UkQ-8I-fks"/>
                            <constraint firstItem="ojc-jL-xjS" firstAttribute="leading" secondItem="ipu-hV-pBQ" secondAttribute="leading" constant="16" id="adn-hy-wtX"/>
                            <constraint firstItem="ipu-hV-pBQ" firstAttribute="trailing" secondItem="ojc-jL-xjS" secondAttribute="trailing" constant="16" id="fuT-pf-51H"/>
                            <constraint firstItem="aEc-dx-9mJ" firstAttribute="centerX" secondItem="f58-4q-I1K" secondAttribute="centerX" id="mE9-DE-lwo"/>
                            <constraint firstItem="aEc-dx-9mJ" firstAttribute="centerY" secondItem="f58-4q-I1K" secondAttribute="centerY" id="p2t-J9-5qo"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="XXC-d8-zPi"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bl6-kz-jX7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="264" y="-1075"/>
        </scene>
    </scenes>
    <resources>
        <image name="auth_screen_logo" width="60" height="60"/>
        <image name="nav_back_button" width="9" height="16"/>
        <namedColor name="YP Black">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
