...
        shareButton.addTarget(nil, action: #selector(didtapShareButton), for: .touchUpInside)
        return shareButton
    }()
    
    private let backButton: UIButton = {
        let backButton = UIButton()
        backButton.accessibilityIdentifier = "BackButton"
        backButton.translatesAutoresizingMaskIntoConstraints = false
        backButton.setTitle("", for: .normal)
        backButton.setImage(UIImage(named: "chevron.backward"), for: .normal)
        backButton.imageView?.contentMode = .scaleAspectFill
        backButton.addTarget(nil, action: #selector(didTapBackButton), for: .touchUpInside)
        return backButton
...
